--- a/docs/Practicos/tp1-tidyverse/tidyverse_TP_solved.Rmd
+++ b/docs/Practicos/tp1-tidyverse/tidyverse_TP_solved.Rmd
@@ -66,7 +66,9 @@ Por supuesto que con lo que vimos en las clases no les va a alcanzar para resolv
 
 Vamos a ver qué jugo`r emo::ji("juice")`les podemos sacar a estos datos...
 
-1. Empecemos con algo sencillo. Usemos `View()` para visualizar `summer_tbl`. En la columna `Athlete` ¿Qué pasa en los deportes de equipo? ¿Esta bien si sumamos las medallas tal cual están en el `tibble`? ¿Cómo podemos hacer para solucionarlo?
+1. Empecemos con algo sencillo: ¿Qué simboliza cada fila del `tibble`? ¿Es una medalla por país o por atleta?.
+
+    *Pista*: usemos `View()` para visualizar `summer_tbl` antes de hacer ninguna operación. En la columna `Athlete` ¿Qué pasa en los deportes de equipo? Si de ahora en adelante vamos a estar interesados en las medallas por país ¿Esta bien calcular las medallas totales sumando las filas del `tibble`? ¿Cómo podemos hacer para solucionarlo?.
 
     Acá una propuesta (hagan lo mismo para `winter_tbl`):
 
@@ -74,14 +76,14 @@ Vamos a ver qué jugo`r emo::ji("juice")`les podemos sacar a estos datos...
 # Acomodemos el tibble
 summer_por_disciplina_tbl <- summer_tbl %>% 
     group_by(Year, City, Sport, Country, Discipline, Event, Gender, Medal) %>%
-    summarise() # No hace ninguna operación
+    summarise() # No hace ninguna operación, simplemente se queda con una sola de las ocurrencias
 ```
 
 ```{r}
 # Acomodemos el tibble
 winter_por_disciplina_tbl <- winter_tbl %>% 
     group_by(Year, City, Sport, Country, Discipline, Event, Gender, Medal) %>%
-    summarise() # No hace ninguna operación
+    summarise() # No hace ninguna operación, simplemente se queda con una sola de las ocurrencias
 ```
 
 2. Ahora que ya tenemos las medallas por país (y no por atleta `r emo::ji("wink")`) para cada disciplina, usando `group_by()` y los verbos de *{dplyr}*, creen un nuevo tibble (`oro_por_pais`) que tenga, de forma ordenada, la cantidad de medallas de oro que ganó cada país en toda la historia de los Juegos Olímpicos de verano.
@@ -93,7 +95,7 @@ winter_por_disciplina_tbl <- winter_tbl %>%
 gold_by_country <- summer_por_disciplina_tbl %>% 
   filter(Medal=="Gold") %>% 
   group_by(Country) %>% 
-  summarise(N = n()) %>% 
+  count(name = "N") %>% # o summarise(N = n())
   arrange(desc(N))
 
 head(gold_by_country)
@@ -105,7 +107,7 @@ head(gold_by_country)
 # Solución
 medal_by_country <- summer_por_disciplina_tbl %>% 
   group_by(Country, Medal) %>% 
-  summarise(N = n())
+  count(name = "N")# o summarise(N = n())
 
 head(medal_by_country)
 ```
@@ -117,7 +119,7 @@ head(medal_by_country)
 gold_by_country <- summer_por_disciplina_tbl %>% 
   filter(Medal=="Gold") %>% 
   group_by(Country) %>% 
-  summarise(N = n()) %>% 
+  count(name = "N") %>% # o summarise(N = n())
   filter(N>5)
 
 head(gold_by_country)
@@ -129,18 +131,18 @@ head(gold_by_country)
 
 ```{r}
 # Solución
-winter_por_disciplina_tbl %>% 
+medallas_hockey_tbl <- winter_por_disciplina_tbl %>% 
   filter(Country %in% c("URS", "CAN")) %>% 
   filter(Discipline == "Ice Hockey") %>% 
   filter(Medal == "Gold") %>% 
   filter(Gender == "Men") %>%
   group_by(Country) %>% 
-  summarise(N = n())
+  count(name = "N") # o summarise(N = n())
 
-head(winter_por_disciplina_tbl)
+head(medallas_hockey_tbl)
 ```
 
-6. Armemos un `tibble` con los nombres de los medallistas olímpicos argentinos en deportes acuáticos y la disciplina, evento y medalla que ganaron. 
+6. Armemos un `tibble` con los nombres de los medallistas olímpicos argentinos en deportes acuáticos y la disciplina, evento, juego y medalla que ganaron. 
 
     *Pista*: Para seleccionar más de una columna hay que hacer una lista usando `c()` y se recomienda utilizar [all_of()](https://www.rdocumentation.org/packages/tidyselect/versions/1.1.1/topics/all_of).
 
@@ -149,24 +151,24 @@ head(winter_por_disciplina_tbl)
 nombres_natacion_tbl <- summer_tbl %>%
   filter(Sport == "Aquatics") %>%
   filter(Country == "ARG") %>% 
-  select(all_of(c("Athlete", "Discipline", "Event", "Medal")))
+  select(all_of(c("Year", "Athlete", "Discipline", "Event", "Medal")))
 
-head(nombres_natacion_tbl)
+nombres_natacion_tbl
 ```
 
 7. ¿Cuáles son los tres países con más medallas de oro en total (juegos de invierno y verano)? 
 
-    *Pista 1*: para combinar dos `tibbles` con las mismas columnas pueden usar [rbind()](https://rpubs.com/dku850/597154#:~:text=The%20name%20of%20the%20rbind,code%20for%20rbind%20in%20R.). 
+    *Pista 1*: para combinar dos `tibbles` con las mismas columnas pueden usar [bind_rows()](https://dplyr.tidyverse.org/reference/bind.html). 
 
     *Pista 2*: Para quedarse con los tres primeros valores pueden usar la función [slice_head()](https://dplyr.tidyverse.org/reference/slice.html) con `n = 3`.
 
 ```{r}
 # Solución
 top_3_tbl <- winter_por_disciplina_tbl %>%
-  rbind(summer_por_disciplina_tbl) %>%
+  bind_rows(summer_por_disciplina_tbl) %>%
   filter(Medal == "Gold") %>%
   group_by(Country) %>%
-  summarise(N = n()) %>%
+  count(name = "N") %>% # o summarise(N = n())
   arrange(desc(N)) %>%
   slice_head(n = 3)
 
@@ -184,7 +186,7 @@ head(top_3_tbl)
 medallas_per_million_tbl <- summer_por_disciplina_tbl %>% 
   rbind(winter_por_disciplina_tbl) %>% 
   group_by(Country) %>% 
-  summarise(Total_Medals = n()) %>% 
+  count(name = "Total_Medals") %>% # o summarise(Total_Medals = n()) %>% 
   rename("Code" = "Country") %>% 
   left_join(dictionary_tbl) %>% 
   drop_na() %>%
