--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -54,7 +54,7 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 | --------------------- | --------------------- | --------------------- |
 | Bienvenidos al Tidyverse                        | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-2/Tidyverse_1.html) | [YouTube](https://www.youtube.com/watch?v=l1ow5g2aUhs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=4) |
 | El Tidyverse en acción                          | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-3/Tidyverse_2.html) | [YouTube](https://www.youtube.com/watch?v=MpypVMxu3V8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=5) |
-| *tidyverse*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP_solved.html) | [(CS-2021)](https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9) [(CS-2022)](https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9) |
+| *tidyverse*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP_solved.html) | [(CS-2021)](https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9) [(CS-2022)](https://www.youtube.com/watch?v=n-mw_jn5A6E&list=PL9Cl0jpAAyjyLxsoi_8VM_duU6g0YahvT&index=1) |
 
 * **También en la intensa semana 1:** Visualización de datos con R `r ji("painter")`.
 
@@ -63,7 +63,7 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 | Visualización de datos: *A New Hope*            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-1/ggplot_1.html) | [YouTube](https://www.youtube.com/watch?v=LE2QVqLcvE0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=6) |
 | Visualización de datos: *Ggplot2 Strikes Back*  | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-2/ggplot_2.html) | [YouTube](https://www.youtube.com/watch?v=TMhZML7JqsM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=7) |
 | Visualización de datos: *Return of the Ggplot2* | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-3/ggplot_3.html) | [YouTube](https://www.youtube.com/watch?v=j0vwd7w_Kok&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=8) |
-| *ggplot2*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP_solved.html) | [(CS-2021)](https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10) [(CS-2022)](https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10) |
+| *ggplot2*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP_solved.html) | [(CS-2021)](https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10) [(CS-2022)](https://www.youtube.com/watch?v=n-mw_jn5A6E&list=PL9Cl0jpAAyjyLxsoi_8VM_duU6g0YahvT&index=1) |
 
 ### Unidad 2
 
