--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -15,6 +15,8 @@ vignette: >
 
 ```{r, include = FALSE}
 library(emo)
+library(kableExtra)
+library(tidyverse)
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -37,16 +39,44 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 
 * **Semana 0 (Antes del 27/6):** Para ver si nunca tuviste contacto con **R** ni **RStudio**
 
-| Clase                 | Vídeo                 |
-| --------------------- | --------------------- |
-| Introducción a R y Rstudio    | [YouTube](https://www.youtube.com/watch?v=NOwcUHaqlyI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=1) |
+```{r echo = F}
+semana0 <- tibble(Clase = "Introducción a R y Rstudio",
+                  Documento = "No hay",
+                  Videos = "YouTube")
+
+semana0 %>%
+  kbl(align = c("l", "c", "c")) %>%
+  kable_material(c("striped", "hover"), html_font = "Roboto", full_width = F) %>%
+  column_spec(3, link = "https://www.youtube.com/watch?v=NOwcUHaqlyI", color = "#205E93", bold = T)
+```
+<!-- | Clase                 | Vídeo                 | -->
+<!-- | --------------------- | --------------------- | -->
+<!-- | Introducción a R y Rstudio    | [YouTube](https://www.youtube.com/watch?v=NOwcUHaqlyI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=1) | -->
 
 * **Semana 1 (27/6 al 1/7):** Presentación del curso `r ji("baby")`.
 
-| Clase                 | Documento             | Vídeo                 |
-| --------------------- | --------------------- | --------------------- |
-| Presentación del curso | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/Presentacion_curso/Presentacion_de_R.html) | [(CS-2021)](https://www.youtube.com/watch?v=EfR9VmDnDIg&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=2) |
-| ¿Por qué R?                                    | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-1/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=SfQ9JF72GvI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=3)
+```{r echo = F}
+semana1 <- tibble(Clase = c("Presentación del curso", "¿Por qué R?"),
+                  Documento = c("Slides", "Slides"),
+                  Videos = c("CS-2021", "YouTube"))
+
+slides_semana_1 <- c("https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/Presentacion_curso/Presentacion_de_R.html",
+                     "https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/Presentacion_curso/Presentacion_de_R.html")
+
+videos_semana_1 <- c("https://www.youtube.com/watch?v=EfR9VmDnDIg",
+                     "https://www.youtube.com/watch?v=SfQ9JF72GvI")
+
+semana1 %>%
+  kbl(align = c("l", "c", "c")) %>%
+  kable_material(c("striped", "hover"), html_font = "Roboto") %>%
+  column_spec(2, link = slides_semana_1, color = "#C0002B", bold = T) %>%
+  column_spec(3, link = videos_semana_1, color = "#205E93", bold = T)
+```
+
+<!-- | Clase                 | Documento             | Vídeo                 | -->
+<!-- | --------------------- | --------------------- | --------------------- | -->
+<!-- | Presentación del curso | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/Presentacion_curso/Presentacion_de_R.html) | [(CS-2021)](https://www.youtube.com/watch?v=EfR9VmDnDIg&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=2) | -->
+<!-- | ¿Por qué R?                                    | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-1/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=SfQ9JF72GvI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=3) -->
 
 * **También en la semana 1:** Introducción a R: Bienvenido al Tidyverse! `r ji("baby")`.
 
